# eflife

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac  description
data/desktop/: Makefile.am  eflife.desktop.in
data/themes/default/: default.edc
doc/: Makefile.am  eflife.1.in
packaging/pkgbuild/: PKGBUILD
packaging/slackware/: Makefile.am  eflife.SlackBuild  slack-desc
po/: POTFILES.in
